--- a/pom.xml
+++ b/pom.xml
@@ -76,4 +76,28 @@
     		<version>${extentreports.version}</version>
 		</dependency>	
 </dependencies>
+	<build>
+    <plugins>
+         <plugin>
+            <groupId>org.apache.maven.plugins</groupId>
+            <artifactId>maven-surefire-plugin</artifactId>
+            <version>2.18.1</version>
+            <configuration>
+                <suiteXmlFiles>
+                <suiteXmlFile>testng.xml</suiteXmlFile>
+                </suiteXmlFiles>
+            </configuration>
+        </plugin>
+        
+        <plugin>
+            <groupId>org.apache.maven.plugins</groupId>
+            <artifactId>maven-compiler-plugin</artifactId>
+            <version>2.5.1</version>
+            <configuration>
+                <source>1.7</source>
+                <target>1.7</target>
+           </configuration>
+        </plugin>
+    </plugins>
+</build>
 </project>
